app/assets/stylesheets/styles.css
#error-summary-display:focus{
    outline: 3px solid #ffbf47;
}
.margin-top-0 {
    margin-top: 0px !important;
}
.margin-top-10 {
    margin-top: 10px !important;
}
.margin-top-30 {
    margin-top: 30px !important;
}
.margin-top-40 {
    margin-top: 40px !important;
}
.margin-top-50 {
    margin-top: 50px !important;
}
.margin-top-60 {
    margin-top: 60px !important;
}
.margin-bottom-20 {
    margin-bottom: 20px !important;
}

.margin-bottom-30 {
    margin-bottom: 30px !important;
}

.margin-bottom-40 {
    margin-bottom: 40px !important;
}

.normal-text {
    color: #0b0c0c !important;
}
.text-small .button--link-style,
.text-small thead tr th,
.text-small tbody tr td {
    font-size: 16.15px !important;
}

.text-small .button--link-style {
    text-align: left;
}

.form-field--error .form-date .form-field--error{
    border-left: none;
    padding: inherit;
}

.form-field--error legend .heading-large{
    margin-top: 0px !important;
}

.margin-left-0 {
    margin-left: 0 !important
}

.supplementary-information {
    display: block;
    font-size: 0.85em;
    color: #6f777b;
}
caption.caption-normal{
    font-weight: normal;
    text-align: left;
}

/* no js style for dates */
.no-js .form-date .form-field--error{
    border-left: none;
    padding: inherit;
    -webkit-box-sizing: inherit;
    box-sizing: inherit;
    padding: inherit;
}
.no-js .nojs-date-fields-error .form-group.soft--ends{
    border-left: 3px solid #df3034;
    padding: 0.75em 1em;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: .63158em .84211em .63158em .84211em;
}

.no-js .nojs-date-fields-error .error-notification{
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height: 1px;
    width: 1px;
    margin: -1px;
    padding: 0;
    border: 0;
}
/*IE10 Fix for DetailsPloyFill*/
.no-details details summary .arrow-open,
.no-details details summary .arrow-closed{
    display: none;
}

/* form overrides */

.flash.error-summary {
    border: 5px solid #b10e1e;
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 20px 15px 15px;
}
.flash.error-summary a{
    font-weight: bold;
}
#error-summary-heading{
    font-size: 24px;
}
.form-field--error .error-notification{
    font-weight: bold;
    font-size: 19px;
    line-height: 1.31579;
}

.form-field--error {
    border-left: 5px solid #b10e1e;
    padding-left: 15px;
    margin-right: 15px;
}
.form-field--error input[type="text"]{
    border: 4px solid #b10e1e;
}

